[main-private] update in DefaultsConceptsExpander to filter out results without pref label