@@ -3,6 +3,7 @@
  */
 package eu.essi_lab.lib.skoss.client.test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.Executors;
@@ -11,11 +12,12 @@ import org.junit.Assert;
 import org.junit.Test;
 
 import eu.essi_lab.lib.skoss.SKOSClient;
+import eu.essi_lab.lib.skoss.SKOSClient.SearchTarget;
+import eu.essi_lab.lib.skoss.SKOSConcept;
 import eu.essi_lab.lib.skoss.SKOSResponse;
 import eu.essi_lab.lib.skoss.ThreadMode;
-import eu.essi_lab.lib.skoss.SKOSClient.SearchTarget;
-import eu.essi_lab.lib.skoss.expander.ExpansionLimit;
 import eu.essi_lab.lib.skoss.expander.ConceptsExpander.ExpansionLevel;
+import eu.essi_lab.lib.skoss.expander.ExpansionLimit;
 import eu.essi_lab.lib.skoss.expander.ExpansionLimit.LimitTarget;
 import eu.essi_lab.lib.skoss.expander.impl.DefaultConceptsExpander;
 import eu.essi_lab.lib.skoss.finder.impl.DefaultConceptsFinder;
@@ -26,36 +28,69 @@ import eu.essi_lab.lib.skoss.finder.impl.DefaultConceptsFinder;
 public class ClientExternalOntologiesOrderTest {
 
     @Test
-    public void test1() throws IllegalArgumentException, Exception {
+    public void test() throws IllegalArgumentException, Exception {
 
-	test(Arrays.asList(//
+	List<String> ontologies = Arrays.asList(//
 
-		"http://hydro.geodab.eu/hydro-ontology/sparql", //
 		"https://dbpedia.org/sparql", //
 		"http://localhost:3031/gemet/query", //
+		"http://hydro.geodab.eu/hydro-ontology/sparql", //
 		"https://vocabularies.unesco.org/sparql"//
 
-	));
+	);
+
+	List<List<String>> perms = permutations(ontologies);
+
+	List<List<String>> out = new ArrayList<>();
+
+	for (List<String> ont : perms) {
+
+	    List<SKOSConcept> list = test(ont);
+
+	    out.add(list.stream().map(c -> c.toString()).sorted().toList());
+	}
+
+	System.out.println(out);
+
+	Assert.assertEquals(1, out.stream().distinct().count());
     }
 
-    @Test
-    public void test2() throws IllegalArgumentException, Exception {
+    /**
+     * @param <T>
+     * @param list
+     * @return
+     */
+    private static <T> List<List<T>> permutations(List<T> list) {
 
-	test(Arrays.asList(//
+	if (list.size() <= 1) {
+	    return List.of(list);
+	}
 
-		"http://localhost:3031/gemet/query", //
-		"http://hydro.geodab.eu/hydro-ontology/sparql", //
-		"https://dbpedia.org/sparql", //
-		"https://vocabularies.unesco.org/sparql"//
-	));
+	List<List<T>> result = new ArrayList<>();
+
+	for (int i = 0; i < list.size(); i++) {
+
+	    T elem = list.get(i);
+	    List<T> rest = new ArrayList<>(list);
+	    rest.remove(i);
+
+	    for (List<T> perm : permutations(rest)) {
+		List<T> newPerm = new ArrayList<>();
+		newPerm.add(elem);
+		newPerm.addAll(perm);
+		result.add(newPerm);
+	    }
+	}
+	return result;
     }
 
     /**
      * @param ontologies
+     * @return
      * @throws IllegalArgumentException
      * @throws Exception
      */
-    private void test(List<String> ontologies) throws IllegalArgumentException, Exception {
+    private List<SKOSConcept> test(List<String> ontologies) throws IllegalArgumentException, Exception {
 
 	SKOSClient client = new SKOSClient();
 
@@ -74,7 +109,7 @@ public class ClientExternalOntologiesOrderTest {
 	//
 
 	DefaultConceptsFinder finder = new DefaultConceptsFinder();
-	finder.setTraceQuery(true);
+	// finder.setTraceQuery(true);
 	finder.setThreadMode(ThreadMode.MULTI(() -> Executors.newFixedThreadPool(4)));
 	// finder.setTaskConsumer((task) -> System.out.println(task));
 
@@ -91,7 +126,9 @@ public class ClientExternalOntologiesOrderTest {
 
 	System.out.println(response.getLabels());
 
-	Assert.assertTrue(response.getLabels().contains("wind"));
+	// Assert.assertTrue(response.getLabels().contains("wind"));
+
+	return response.getResults();
     }
 
 }
